MyFirstProject/src/objects/Trainee__c.object
<CustomObject>
    <description>the object is having relationship with mentor</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>Mentor__c</referenceTo>
        <relationshipLabel>Trainee</relationshipLabel>
        <relationshipName>Trainee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_ID__c</fullName>
        <displayFormat>TID-{0000}</displayFormat>
        <label>T_ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Trainee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trainee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>